--- a/client/src/pages/styles/Login.css
+++ b/client/src/pages/styles/Login.css
@@ -53,7 +53,43 @@
     border-radius: 50px;
     border: 1px solid white;
   }
-  
+
+  .password-input {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
+  .password-input input {
+    flex: 1;
+    width: 100%;
+    padding-right: 44px;
+  }
+
+  .password-toggle-visibility {
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-55%);
+    background: transparent;
+    border: none;
+    padding-bottom: 5px;
+    margin: 0;
+    width: 24px;
+    height: 24px;
+    color: black;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+/* 
+  .toggle-visibility svg {
+    display: block;
+    width: 20px;
+    height: 20px;
+  }
+   */
   .login-form .login-btn {
     font-size: 0.7rem;
     padding: 5px;
@@ -241,4 +277,9 @@
     height: 20px;
     background: none;
     display: inline-block;
+}
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none;
 }
